--- a/src/main/resources/com/zst/autovermietung/first-home-screen.fxml
+++ b/src/main/resources/com/zst/autovermietung/first-home-screen.fxml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.chart.AreaChart?>
-<?import javafx.scene.chart.CategoryAxis?>
-<?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -31,33 +28,30 @@
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <Label layoutX="126.0" layoutY="114.0" text="19" textFill="#1f30a3">
+      <Label fx:id="anzahlAutos" layoutX="126.0" layoutY="114.0" text="19" textFill="#1f30a3">
          <font>
             <Font size="45.0" />
          </font>
       </Label>
-      <Label layoutX="139.0" layoutY="304.0" text="7" textFill="#1f30a3">
+      <Label fx:id="anzahlverfugautos" layoutX="139.0" layoutY="304.0" text="7" textFill="#1f30a3">
          <font>
             <Font size="45.0" />
          </font>
       </Label>
-      <Label layoutX="473.0" layoutY="304.0" text="12" textFill="#1f30a3">
+      <Label fx:id="anzahlkunden" layoutX="473.0" layoutY="304.0" text="12" textFill="#1f30a3">
          <font>
             <Font size="45.0" />
          </font>
       </Label>
-      <Label layoutX="431.0" layoutY="76.0" prefHeight="20.0" prefWidth="153.0" text="Mietstatus (monatlich)">
+      <Label layoutX="419.0" layoutY="76.0" prefHeight="20.0" prefWidth="166.0" text="Anzahl von Mietverträge">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <AreaChart layoutX="396.0" layoutY="104.0" prefHeight="154.0" prefWidth="202.0">
-        <xAxis>
-          <CategoryAxis side="BOTTOM" />
-        </xAxis>
-        <yAxis>
-          <NumberAxis side="LEFT" />
-        </yAxis>
-      </AreaChart>
+      <Label fx:id="anzahlmietvertrage" layoutX="473.0" layoutY="114.0" text="19" textFill="#1f30a3">
+         <font>
+            <Font size="45.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
