--- a/src/main/resources/com/zst/autovermietung/mietvertrag-screen-fur-manager.fxml
+++ b/src/main/resources/com/zst/autovermietung/mietvertrag-screen-fur-manager.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -20,5 +21,6 @@
             <VBox fx:id="mietvertragList" fillWidth="false" prefHeight="326.0" prefWidth="636.0" />
          </content>
       </ScrollPane>
+      <CheckBox fx:id="problem" layoutX="504.0" layoutY="69.0" mnemonicParsing="false" onAction="#change" text="Mietverträge mit Problem" />
    </children>
 </AnchorPane>
