--- a/src/main/resources/com/zst/autovermietung/mietvertrag-screen.fxml
+++ b/src/main/resources/com/zst/autovermietung/mietvertrag-screen.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -14,12 +15,13 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <Button fx:id="mietvertragAddButton" layoutX="129.0" layoutY="62.0" mnemonicParsing="false" onAction="#openAddScreen" prefHeight="27.0" prefWidth="162.0" text="neue Mietvertrag schließen" />
-      <Button layoutX="388.0" layoutY="62.0" mnemonicParsing="false" onAction="#abgelaufendeMietvertrage" prefHeight="27.0" prefWidth="162.0" text="abgelaufene Mietverträge" />
+      <Button fx:id="mietvertragAddButton" layoutX="34.0" layoutY="67.0" mnemonicParsing="false" onAction="#openAddScreen" prefHeight="27.0" prefWidth="162.0" text="neue Mietvertrag schließen" />
+      <Button layoutX="263.0" layoutY="67.0" mnemonicParsing="false" onAction="#abgelaufendeMietvertrage" prefHeight="27.0" prefWidth="162.0" text="abgelaufene Mietverträge" />
       <ScrollPane layoutX="25.0" layoutY="106.0" prefHeight="330.0" prefWidth="639.0">
          <content>
             <VBox fx:id="mietvertragList" fillWidth="false" prefHeight="326.0" prefWidth="636.0" />
          </content>
       </ScrollPane>
+      <CheckBox fx:id="problem" layoutX="504.0" layoutY="72.0" mnemonicParsing="false" onAction="#change" text="Mietverträge mit Problem" />
    </children>
 </AnchorPane>
