--- a/src/main/resources/com/zst/autovermietung/settings-manager.fxml
+++ b/src/main/resources/com/zst/autovermietung/settings-manager.fxml
@@ -3,6 +3,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -64,14 +66,14 @@
             </Button>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="40.0" layoutY="75.0" prefHeight="361.0" prefWidth="264.0">
+      <AnchorPane fx:id="paneInfos" layoutX="31.0" layoutY="61.0" prefHeight="361.0" prefWidth="264.0">
          <children>
-            <Label layoutX="11.0" layoutY="111.0" prefHeight="18.0" prefWidth="87.0" text="TR-ID:">
+            <Label layoutX="11.0" layoutY="98.0" prefHeight="18.0" prefWidth="87.0" text="TR-ID:">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </Label>
-            <Label fx:id="nameLabel" alignment="CENTER" layoutX="23.0" layoutY="14.0" prefHeight="47.0" prefWidth="218.0" text="NAME + NACHNAME" textAlignment="CENTER" wrapText="true">
+            <Label fx:id="nameLabel" alignment="CENTER" layoutX="23.0" layoutY="14.0" prefHeight="47.0" prefWidth="218.0" text="NAME + NACHNAME" textAlignment="CENTER" textFill="#101861" wrapText="true">
                <font>
                   <Font size="16.0" />
                </font>
@@ -81,67 +83,176 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <Label layoutX="8.0" layoutY="184.0" prefHeight="19.0" prefWidth="106.0" text="Geburtsdatum: ">
+            <Label layoutX="8.0" layoutY="171.0" prefHeight="19.0" prefWidth="106.0" text="Geburtsdatum: ">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </Label>
-            <Label layoutX="8.0" layoutY="222.0" prefHeight="18.0" prefWidth="87.0" text="Geschlecht:">
-               <font>
-                  <Font size="13.0" />
-               </font>
-            </Label>
-            <Label layoutX="8.0" layoutY="258.0" text="Telefonnummer:">
-               <font>
-                  <Font size="13.0" />
-               </font>
-            </Label>
-            <Label layoutX="8.0" layoutY="295.0" prefHeight="18.0" prefWidth="87.0" text="Adress:">
-               <font>
-                  <Font size="13.0" />
-               </font>
-            </Label>
-            <Label fx:id="idLabel" layoutX="124.0" layoutY="112.0" prefHeight="18.0" prefWidth="106.0" text="TR-ID:">
-               <font>
-                  <Font size="13.0" />
-               </font>
-            </Label>
-            <Label fx:id="gdLabel" layoutX="124.0" layoutY="184.0" prefHeight="18.0" prefWidth="106.0" text="TR-ID:">
-               <font>
-                  <Font size="13.0" />
-               </font>
-            </Label>
-            <Label fx:id="geschlechtLabel" layoutX="124.0" layoutY="222.0" prefHeight="18.0" prefWidth="106.0" text="TR-ID:">
-               <font>
-                  <Font size="13.0" />
-               </font>
-            </Label>
-            <Label fx:id="telefonnummerLabel" layoutX="124.0" layoutY="258.0" prefHeight="18.0" prefWidth="106.0" text="TR-ID:">
-               <font>
-                  <Font size="13.0" />
-               </font>
-            </Label>
-            <Label fx:id="adressLabel" alignment="TOP_LEFT" layoutX="124.0" layoutY="295.0" prefHeight="65.0" prefWidth="106.0" text="TR-ID:" wrapText="true">
-               <font>
-                  <Font size="13.0" />
-               </font>
-            </Label>
-            <Label layoutX="11.0" layoutY="147.0" prefHeight="19.0" prefWidth="94.0" text="Benutzername:">
+            <Label layoutX="8.0" layoutY="209.0" prefHeight="18.0" prefWidth="87.0" text="Geschlecht:">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </Label>
-            <Label fx:id="bnLabel" layoutX="124.0" layoutY="147.0" prefHeight="19.0" prefWidth="106.0" text="TR-ID:">
+            <Label layoutX="8.0" layoutY="295.0" prefHeight="18.0" prefWidth="87.0">
                <font>
                   <Font size="13.0" />
                </font>
             </Label>
+            <Label fx:id="idLabel" layoutX="124.0" layoutY="99.0" prefHeight="18.0" prefWidth="106.0" text="TR-ID:">
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Label>
+            <Label fx:id="gdLabel" layoutX="124.0" layoutY="171.0" prefHeight="18.0" prefWidth="106.0" text="TR-ID:">
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Label>
+            <Label fx:id="geschlechtLabel" layoutX="124.0" layoutY="209.0" prefHeight="18.0" prefWidth="106.0" text="TR-ID:">
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Label>
+            <Label fx:id="telefonnummerLabel" layoutX="124.0" layoutY="245.0" prefHeight="18.0" prefWidth="106.0" text="TR-ID:">
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Label>
+            <Label fx:id="adressLabel" alignment="TOP_LEFT" layoutX="124.0" layoutY="282.0" prefHeight="65.0" prefWidth="106.0" text="TR-ID:" wrapText="true">
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Label>
+            <Label layoutX="11.0" layoutY="134.0" prefHeight="19.0" prefWidth="94.0" text="Benutzername:">
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font>
+            </Label>
+            <Label fx:id="bnLabel" layoutX="124.0" layoutY="134.0" prefHeight="19.0" prefWidth="106.0" text="TR-ID:">
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Label>
+            <Label layoutX="8.0" layoutY="245.0" prefHeight="19.0" prefWidth="106.0" text="Telefonnummer:">
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font>
+            </Label>
+            <Label layoutX="8.0" layoutY="282.0" prefHeight="18.0" prefWidth="87.0" text="Adress:">
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font>
+            </Label>
+            <Button layoutX="52.0" layoutY="320.0" mnemonicParsing="false" onAction="#editInfos" prefHeight="27.0" prefWidth="17.0">
+               <font>
+                  <Font size="13.0" />
+               </font>
+               <graphic>
+                  <ImageView fitHeight="19.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/icons8-edit-48%20-%20Kopya.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
          </children>
       </AnchorPane>
-      <Label layoutX="298.0" layoutY="22.0" text="Settings" textFill="#101861">
+      <Label layoutX="263.0" layoutY="29.0" prefHeight="32.0" prefWidth="162.0" text="Persönliche Daten" textFill="#101861">
          <font>
-            <Font size="26.0" />
+            <Font size="20.0" />
          </font>
       </Label>
+      <AnchorPane fx:id="paneInfos1" layoutX="31.0" layoutY="61.0" prefHeight="361.0" prefWidth="264.0" visible="false">
+         <children>
+            <Label layoutX="11.0" layoutY="98.0" prefHeight="18.0" prefWidth="87.0" text="TR-ID:">
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font>
+            </Label>
+            <Label fx:id="rolleLabel1" alignment="CENTER" layoutX="23.0" layoutY="61.0" prefHeight="18.0" prefWidth="218.0" text="Rolle" textAlignment="CENTER">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label layoutX="8.0" layoutY="171.0" prefHeight="19.0" prefWidth="106.0" text="Geburtsdatum: ">
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font>
+            </Label>
+            <Label layoutX="8.0" layoutY="209.0" prefHeight="18.0" prefWidth="87.0" text="Geschlecht:">
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font>
+            </Label>
+            <Label layoutX="8.0" layoutY="295.0" prefHeight="18.0" prefWidth="87.0">
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Label>
+            <Label fx:id="idLabel1" layoutX="124.0" layoutY="99.0" prefHeight="18.0" prefWidth="106.0" text="TR-ID:">
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Label>
+            <Label fx:id="gdLabel1" layoutX="124.0" layoutY="171.0" prefHeight="18.0" prefWidth="106.0" text="TR-ID:">
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Label>
+            <Label fx:id="geschlechtLabel1" layoutX="124.0" layoutY="209.0" prefHeight="18.0" prefWidth="106.0" text="TR-ID:">
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Label>
+            <Label layoutX="11.0" layoutY="134.0" prefHeight="19.0" prefWidth="94.0" text="Benutzername:">
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font>
+            </Label>
+            <Label fx:id="bnLabel1" layoutX="124.0" layoutY="134.0" prefHeight="19.0" prefWidth="106.0" text="TR-ID:">
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Label>
+            <Label layoutX="8.0" layoutY="245.0" prefHeight="19.0" prefWidth="106.0" text="Telefonnummer:">
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font>
+            </Label>
+            <Label layoutX="8.0" layoutY="282.0" prefHeight="18.0" prefWidth="87.0" text="Adress:">
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font>
+            </Label>
+            <TextField fx:id="nameField" layoutX="31.0" layoutY="26.0" prefHeight="30.0" prefWidth="94.0">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </TextField>
+            <TextField fx:id="nachnameField" layoutX="135.0" layoutY="26.0" prefHeight="26.0" prefWidth="94.0">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </TextField>
+            <TextField fx:id="telefonField" layoutX="124.0" layoutY="241.0" prefHeight="26.0" prefWidth="106.0">
+               <font>
+                  <Font size="11.0" />
+               </font>
+            </TextField>
+            <TextArea fx:id="adressField" layoutX="124.0" layoutY="277.0" prefHeight="74.0" prefWidth="115.0" wrapText="true" />
+            <Button layoutX="51.0" layoutY="321.0" mnemonicParsing="false" onAction="#updateBenutzer" prefHeight="27.0" prefWidth="17.0">
+               <font>
+                  <Font size="13.0" />
+               </font>
+               <graphic>
+                  <ImageView fitHeight="19.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/save.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
